...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.tooling.preview.Preview
import com.guidovezzoni.fakestore.R
import com.guidovezzoni.fakestore.ui.navigation.AppDestination
import com.guidovezzoni.fakestore.ui.theme.FakeStoreTheme

const val BOTTOM_NAVIGATION_PRODUCTS_TAB_TEST_TAG = "bottom_navigation_products_tab"
const val BOTTOM_NAVIGATION_FAVOURITES_TAB_TEST_TAG = "bottom_navigation_favourites_tab"
const val BOTTOM_NAVIGATION_PROFILE_TAB_TEST_TAG = "bottom_navigation_profile_tab"

@Composable
fun BottomNavigationBar(
    selectedDestination: AppDestination,
    onTabTap: (AppDestination) -> Unit,
...
