...
import com.guidovezzoni.fakestore.ui.state.ProductListItem
import com.guidovezzoni.fakestore.ui.theme.FakeStoreTheme
import com.guidovezzoni.fakestore.ui.viewmodel.FavouritesViewModel
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.emptyFlow

const val FAVOURITES_SCREEN_ROOT_TEST_TAG = "favourites_screen"
const val FAVOURITES_LOADING_INDICATOR_TEST_TAG = "favourites_loading_indicator"
const val FAVOURITES_EMPTY_MESSAGE_TEST_TAG = "favourites_empty_message"

@Composable
fun FavouritesScreen(
    uiState: FavouritesUiState,
...
